# ros-semantic-segmentation-pytorch

./: CMakeLists.txt  Dockerfile.cpu  README.md  build_docker.sh  package.xml  run_docker.sh  start_docker.sh
launch/: create_mask.launch  semantic_segmentation.launch
msg/: SegmentationNameMask.msg  SegmentationNameMaskArray.msg  SegmentationObject.msg  SegmentationObjectArray.msg
scripts/: color_coding_dict.py  create_mask.py  labeling.py  run_semantic_segmentation
scripts/mit_semseg/config/: defaults.py
